; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_revs-txns.c_svn_fs_base__change_txn_prop.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs_base/extr_revs-txns.c_svn_fs_base__change_txn_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32, i32* }
%struct.change_txn_prop_args = type { i8*, i32*, i32 }

@TRUE = common dso_local global i32 0, align 4
@txn_body_change_txn_prop = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_base__change_txn_prop(%struct.TYPE_3__* %0, i8* %1, i32* %2, i32* %3) #0 {
  %5 = alloca %struct.TYPE_3__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca %struct.change_txn_prop_args, align 8
  %10 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  store i32* %3, i32** %8, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 1
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %10, align 8
  %14 = load i32*, i32** %10, align 8
  %15 = load i32, i32* @TRUE, align 4
  %16 = call i32 @svn_fs__check_fs(i32* %14, i32 %15)
  %17 = call i32 @SVN_ERR(i32 %16)
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 8
  %21 = getelementptr inbounds %struct.change_txn_prop_args, %struct.change_txn_prop_args* %9, i32 0, i32 2
  store i32 %20, i32* %21, align 8
  %22 = load i8*, i8** %6, align 8
  %23 = getelementptr inbounds %struct.change_txn_prop_args, %struct.change_txn_prop_args* %9, i32 0, i32 0
  store i8* %22, i8** %23, align 8
  %24 = load i32*, i32** %7, align 8
  %25 = getelementptr inbounds %struct.change_txn_prop_args, %struct.change_txn_prop_args* %9, i32 0, i32 1
  store i32* %24, i32** %25, align 8
  %26 = load i32*, i32** %10, align 8
  %27 = load i32, i32* @txn_body_change_txn_prop, align 4
  %28 = load i32, i32* @TRUE, align 4
  %29 = load i32*, i32** %8, align 8
  %30 = call i32* @svn_fs_base__retry_txn(i32* %26, i32 %27, %struct.change_txn_prop_args* %9, i32 %28, i32* %29)
  ret i32* %30
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_fs__check_fs(i32*, i32) #1

declare dso_local i32* @svn_fs_base__retry_txn(i32*, i32, %struct.change_txn_prop_args*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
